~fix: fixing padding wrong and change icon mobile darkmode

--- a/src/components/ApresentationHome/apresentation.module.scss
+++ b/src/components/ApresentationHome/apresentation.module.scss
@@ -13,10 +13,6 @@
         margin-top: calc(128px - 80px);
     }
 
-    div:first-child{
-        margin: 0 2rem;
-    }
-
     .title{
         width: 100%;
         font-size: 30px;
